fixed horizontal scroll

--- a/src/components/Chat/chat.scss
+++ b/src/components/Chat/chat.scss
@@ -13,10 +13,15 @@
 .ui.card > .content > .header + .description {
     max-height: 500px;
     overflow-y: auto;
-
+    overflow-x: hidden;
     display: flex;
     flex-direction: column-reverse;
     overflow-anchor: auto !important;
+    padding: 0 1em 0 0;
+}
+
+.ui.feed > .event > .label + .content {
+    margin: 0;
 }
 
 .chat-feed {
